--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -12,4 +12,8 @@
     margin-top: calc(var(--spacing-double) * -1);
     z-index: calc(var(--popup-z-index) - 1);
   }
+
+  @include darwin-fullscreen {
+    margin-top: var(--spacing-double);
+  }
 }
