--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -145,6 +145,9 @@
    */
   --popup-z-index: 2;
 
+  /** The highlight color used for focus rings and focus box shadows */
+  --focus-color: $orange;
+
   /**
    * Diff view
    */
