--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -104,7 +104,9 @@ button {
 }
 
 // Default focus styling for all focusable element. Most if not all
-// focusable elements will override this.
+// focusable elements will override this to use something other than
+// outline to indicate focus such as background color (for list items)
+// or border-color for elements which has a border.
 :focus {
   outline: 1px solid var(--focus-color);
 }
