Style input focus states

--- a/app/styles/ui/_forms.scss
+++ b/app/styles/ui/_forms.scss
@@ -4,7 +4,6 @@ input[type='email'],
 input[type='range'],
 input[type='search'],
 textarea {
-  transition: border-color 0.25s;
   border: 1px solid var(--box-border-color);
   border-radius: var(--border-radius);
   color: currentColor;
@@ -15,7 +14,17 @@ textarea {
   resize: none;
 
   &:focus {
-    border-color: var(--box-border-accent-color);
+    outline: none;
+    border-color: var(--focus-color);
+  }
+}
+
+input[type='checkbox'] {
+  &:focus {
+    // Don't know why but on Windows this is necessary to
+    // not have a 1px gap around the checkbox on the right
+    // hand side. I'm guessing it's the same on mac?
+    outline-offset: -1px;
   }
 }
 
