Move flex grow declaration out of inline styles

--- a/app/styles/ui/_list.scss
+++ b/app/styles/ui/_list.scss
@@ -1,6 +1,9 @@
+.list {
+  flex-grow: 1;
+}
+
 @include win32-context {
   .list {
-    flex-grow: 1;
     position: relative;
 
     // Fake scrollbar hack
