--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,5 +1,8 @@
 .branches-list-container {
   height: 200px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 
   .branches-list-content {
     display: flex;
@@ -36,4 +39,5 @@
 .branch-filter-input {
   margin: var(--spacing);
   margin-bottom: 0;
+  flex-grow: 1;
 }
