:fire: comparison graph

--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -8,6 +8,8 @@
   height: 34px;
   align-items: center;
 
+  border-bottom: var(--base-border);
+
   @include darwin {
     margin-top: calc(var(--spacing-double) * -1);
     z-index: calc(var(--popup-z-index) - 1);
