Make the overlay transparent
And show the popup in the top left corner

--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-width: 400px;
   width: 50%;
-  margin: auto;
+  margin: var(--spacing-triple) var(--spacing);
   background-color: var(--box-alt-background-color);
   position: absolute;
   border: var(--base-border);
@@ -43,15 +43,11 @@
 }
 
 .popup-overlay {
-  background: rgba(0,0,0,0.25);
+  background: transparent;
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
   z-index: calc(var(--popup-z-index) - 1);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
