--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -5,6 +5,7 @@
   .commit {
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 100%;
     height: 100%;
 
@@ -40,7 +41,6 @@
       flex-shrink: 0;
 
       border-radius: var(--border-radius);
-      align-self: center;
       margin-left: var(--spacing);
     }
 
@@ -48,7 +48,6 @@
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      margin: auto 0;
       margin-left: var(--spacing);
 
       .summary, .byline { @include ellipsis }
