--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -10,7 +10,7 @@ input[type='submit'] {
   border: 1px solid var(--box-border-color);
   border-radius: var(--border-radius);
 
-  &:hover {
+  &:not(:disabled):hover {
     background-color: var(--button-hover-background);
   }
 
