This applies to Windows as well

--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -15,7 +15,7 @@
     z-index: calc(var(--popup-z-index) - 1);
   }
 
-  @include darwin-fullscreen {
+  @include in-fullscreen {
     margin-top: var(--spacing-double);
   }
 }
