Put popup-content in popuppy component

--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -24,7 +24,7 @@
 }
 
 .popup-navigation {
-  padding: var(--spacing);
+  margin-bottom: var(--spacing);
 
   .tab-bar-item {
     display: inline-block;
