--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -92,7 +92,7 @@ pre.diff-hunk {
 .diff-line-selected {
   .diff-line-number {
     background: var(--diff-selected-background-color);
-    border-color: var(--diff-selected-border-color);
+    border-color: var(--diff-selected-border-color) !important;
     color: var(--diff-selected-text-color);
   }
 }
@@ -100,7 +100,7 @@ pre.diff-hunk {
 .diff-line-hover {
   .diff-line-number {
     background: var(--diff-hover-background-color);
-    border-color: var(--diff-hover-border-color);
+    border-color: var(--diff-hover-border-color) !important;
     color: var(--background-color);
   }
 }
