--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -13,13 +13,13 @@
   .branches-list-content:hover {
     background: var(--box-alt-background-color);
   }
-}
 
-// Prevent borders from stacking if the first
-// row is a group label
-.Grid__cell:first-child {
-  .branches-list-label {
-    border-top: none;
+  // Prevent borders from stacking if the first
+  // row is a group label
+  .list-item:first-child {
+    .branches-list-label {
+      border-top: none;
+    }
   }
 }
 
