--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -153,6 +153,8 @@
    * Diff view
    */
 
+  --diff-font-color: #323232;
+
   --diff-border-color: #e5e5e5;
   --diff-line-number-color: #84929c;
   --diff-line-number-column-width: 50px;
