Ensure change list doesn't cause header to shrink

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -19,6 +19,7 @@
     background: var(--box-alt-background-color);
     border-bottom: 1px solid var(--box-border-color);
     display: flex;
+    flex-shrink: 0;
     padding: var(--spacing-half);
   }
 
