--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -150,3 +150,16 @@
     .CodeMirror-scrollbar-filler { background: transparent; }
   }
 }
+
+#diff .image-header {
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: bold;
+}
+
+#diff img {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
