let the commit summary wash over you

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -2,6 +2,9 @@
 
 /** A React component holding the selected commit's detailed information */
 #commit-summary {
+
+  overflow: auto;
+
   .files {
     display: flex;
     flex: 1;
