move description and files into component for scrolling

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -3,11 +3,14 @@
 /** A React component holding the selected commit's detailed information */
 #commit-summary {
 
-  overflow: auto;
+  .commit-summary-scrollable {
+    overflow: auto;
+  }
 
   .files {
     display: flex;
     flex: 1;
+    min-height: 200px;
 
     .list-item {
       border-bottom: var(--light-border);
