respect newlines in commit descriptions

--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -38,6 +38,7 @@
     font-size: var(--font-size-sm);
     padding: var(--spacing);
     word-wrap: break-word;
+    white-space: pre-line;
 
     &:empty {
       display: none;
