--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -83,14 +83,21 @@
   padding: var(--spacing-half);
 
   border-top: var(--base-border);
+  border-right: var(--base-border);
+  background: var(--box-alt-background-color);
 
   .commit-info {
-    .ago {
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
 
+    .ago {
+      font-size: var(--font-size-sm);
     }
 
     .summary {
       font-weight: var(--font-weight-semibold);
+      @include ellipsis;
     }
   }
 }
