--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -1,21 +1,6 @@
 @import "../mixins";
 
-/** A React component holding the toolbar */
+/** A React component holding the main application toolbar component. */
 #toolbar {
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-  height: 34px;
-  align-items: center;
 
-  border-bottom: var(--base-border);
-
-  @include darwin {
-    margin-top: calc(var(--spacing-double) * -1);
-    z-index: calc(var(--popup-z-index) - 1);
-  }
-
-  @include in-fullscreen {
-    margin-top: var(--spacing-double);
-  }
 }
