Initial styles for active dropdowns/buttons

--- a/app/styles/ui/_toolbar.scss
+++ b/app/styles/ui/_toolbar.scss
@@ -24,6 +24,10 @@
   --text-color: #ffffff;
   --background-color: #3b3f46;
 
+  // Invert text and background for selected buttons
+  --box-selected-background-color: #ffffff;
+  --box-selected-text-color: #3b3f46;
+
   color: var(--text-color);
   background-color: var(--background-color);
 
