--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -2,7 +2,6 @@
 
 #desktop-app-title-bar {
   -webkit-app-region: drag;
-  -webkit-user-select: none;
   flex-grow: 0;
   flex-shrink: 0;
   width: 100%;
@@ -25,6 +24,9 @@
   @include darwin {
     height: var(--darwin-title-bar-height);
     z-index: 1;
+
+    background: linear-gradient(to bottom, #3b3f46 0%,#2b2e33 100%);
+    border-bottom: 1px solid #000;
   }
 
   // If you put a -webkit-app-region: drag element close to a window
