--- a/app/styles/ui/_autocompletion.scss
+++ b/app/styles/ui/_autocompletion.scss
@@ -63,7 +63,7 @@
     width: 100%;
 
     .number {
-      color: lightGray;
+      color: var(--text-secondary-color);
       margin-right: var(--spacing-half);
     }
 
