Style first column

--- a/app/styles/ui/_repository.scss
+++ b/app/styles/ui/_repository.scss
@@ -2,4 +2,13 @@
 
 /** A React component holding the currently selected repository */
 #repository {
+
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+
+  &-first-column {
+    display: flex;
+    flex-direction: column;
+  }
 }
