--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -1,6 +1,13 @@
 .tab-bar {
+  display: flex;
+  flex-direction: row;
+
+  min-width: 0;
 
   &-item {
+    flex: 1;
+    text-align: center;
+
     background: var(--tab-bar-background-color);
     box-shadow: inset 0 0 0 1px #D6D6D6;
 
@@ -8,14 +15,12 @@
     // It has the unintended consequence of making it impossible to have a tab
     // bar with just one item but we can live with that.
     border-right-width: 0;
-    padding: 4px 25px;
+    padding: 4px 0;
 
     &:first-child {
-      border-radius: var(--border-radius) 0px 0px var(--border-radius);
     }
 
     &:last-child {
-      border-radius: 0px var(--border-radius) var(--border-radius) 0px;
       border-right-width: 1px;
     }
 
