--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -135,7 +135,7 @@
   --base-box-shadow: 0 1px 2px var(--shadow-color);
 
   --tab-bar-active-color: #3D76C2;
-  --tab-bar-background-color: #EDEDED;
+  --tab-bar-background-color: #ffffff;
 
   /** Win32 has custom scrol bars, see _scroll.scss */
   --win32-scroll-bar-size: 10px;
