New border color
From new design, this replaces the light style, one border for all.

--- a/app/styles/ui/_changes-list.scss
+++ b/app/styles/ui/_changes-list.scss
@@ -36,7 +36,7 @@
 
   .list-item {
     padding: var(--spacing-half);
-    border-bottom: var(--light-border);
+    border-bottom: var(--base-border);
   }
 }
 
