--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
 
-    border-bottom: var(--light-border);
+    border-bottom: var(--base-border);
 
     padding: 0 var(--spacing);
 
