--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -81,9 +81,8 @@
   /**
    * Border color for boxes.
    */
-  --box-border-color: $gray;
+  --box-border-color: #DFDFDF;
   --box-border-accent-color: $blue;
-  --box-border-light-color: #DFDFDF;
 
   /**
    * Background color for selected boxes without keyboard focus
@@ -129,7 +128,6 @@
 
   --border-radius: 3px;
   --base-border: 1px solid var(--box-border-color);
-  --light-border: 1px solid var(--box-border-light-color);
 
   --shadow-color: rgba(0,0,0,0.07);
   --base-box-shadow: 0 1px 2px var(--shadow-color);
