--- a/app/styles/ui/_commit-summary.scss
+++ b/app/styles/ui/_commit-summary.scss
@@ -7,7 +7,7 @@
     flex: 1;
 
     .list-item {
-      border-bottom: var(--light-border);
+      border-bottom: var(--base-border);
       padding: var(--spacing);
     }
 
@@ -33,7 +33,7 @@
   }
 
   &-description {
-    border-bottom: var(--light-border);
+    border-bottom: var(--base-border);
     font-family: var(--font-family-monospace);
     font-size: var(--font-size-sm);
     padding: var(--spacing);
