New tab bar height

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -132,6 +132,7 @@
   --shadow-color: rgba(0,0,0,0.07);
   --base-box-shadow: 0 1px 2px var(--shadow-color);
 
+  --tab-bar-height: 35px;
   --tab-bar-active-color: #3D76C2;
   --tab-bar-background-color: #ffffff;
 
