Create folder for changes styles

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -6,7 +6,7 @@
 @import "ui/octicons";
 @import "ui/list";
 @import "ui/repository-list";
-@import "ui/changes-list";
+@import "ui/changes";
 @import "ui/cloning-repository-view";
 @import "ui/commit-summary";
 @import "ui/commit-list";
