--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -1,4 +1,4 @@
-@import "../mixins";
+@import "../../mixins";
 
 /** A React component holding the currently selected repository's changes */
 #changes-list {
