Render history sidebar

--- a/app/styles/ui/_commit-list.scss
+++ b/app/styles/ui/_commit-list.scss
@@ -2,6 +2,11 @@
 
 /** A React component holding history's commit list */
 #commit-list {
+
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
   .commit {
     display: flex;
     flex-direction: row;
