Move history styles into history folder

--- a/app/styles/ui/history/_commit-summary.scss
+++ b/app/styles/ui/history/_commit-summary.scss
@@ -1,4 +1,4 @@
-@import "../mixins";
+@import "../../mixins";
 
 /** A React component holding the selected commit's detailed information */
 #commit-summary {
