Move toolbar styles into its own folder

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -12,7 +12,7 @@
 @import "ui/history";
 @import "ui/repository";
 @import "ui/resizable";
-@import "ui/toolbar";
+@import "ui/toolbar/toolbar";
 @import "ui/tab-bar";
 @import "ui/panel";
 @import "ui/popup";
