--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -1,4 +1,4 @@
-@import "../mixins";
+@import "../../mixins";
 
 /** A React component holding the main application toolbar component. */
 #desktop-app-toolbar {
