--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -24,6 +24,9 @@
   --text-color: #ffffff;
   --background-color: #3b3f46;
 
+  --box-hover-background-color: #40454D;
+  --box-hover-text-color: #ffffff;
+
   // Invert text and background for selected buttons
   --box-selected-background-color: #ffffff;
   --box-selected-text-color: #3b3f46;
