--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -13,6 +13,7 @@
 @import "ui/repository";
 @import "ui/resizable";
 @import "ui/toolbar/toolbar";
+@import "ui/toolbar/button";
 @import "ui/tab-bar";
 @import "ui/panel";
 @import "ui/popup";
