Proper padding for toolbar buttons

--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
 
-  padding: var(--spacing-half);
+  padding: var(--spacing);
   margin: 0;
   overflow: hidden;
 
