--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -23,6 +23,8 @@
   --text-color: #ffffff;
   --background-color: #3b3f46;
 
+  --box-border-color: #202020;
+
   --box-hover-background-color: #40454D;
   --box-hover-text-color: #ffffff;
 
