Add variable for toolbar height

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -149,6 +149,8 @@
   --shadow-color: rgba(0,0,0,0.07);
   --base-box-shadow: 0 1px 2px var(--shadow-color);
 
+  --toolbar-height: 52px;
+
   --tab-bar-height: 35px;
   --tab-bar-active-color: #3D76C2;
   --tab-bar-background-color: #ffffff;
