--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -1,22 +1,34 @@
 .toolbar-button {
   -webkit-appearance: none;
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  padding: var(--spacing);
-  margin: 0;
-  overflow: hidden;
-
   // Reset styles from global buttons
   border: none;
   box-shadow: none;
   border-radius: 0;
   background-color: transparent;
   text-align: left;
+  margin: 0;
+  padding: 0;
 
   border-right: 1px solid var(--box-border-color);
+
+  // NB This is important, without this the button
+  // element will add an extra 3px of invisible padding
+  // for some inexplicable reason. This forces the
+  // button to take up the entire available space.
+  &,&-content-wrapper {
+    height: 100%;
+  }
+
+  &-content-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    padding: var(--spacing);
+    margin: 0;
+    overflow: hidden;
+  }
 
   &:not(:disabled):hover {
     background-color: var(--box-hover-background-color);
