Reset active effect on toolbar buttons

--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -10,6 +10,9 @@
   margin: 0;
   padding: 0;
 
+  // Reset
+  &:active { box-shadow: none; }
+
   border-right: 1px solid var(--box-border-color);
 
   // NB This is important, without this the button
