--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -1,11 +1,8 @@
 @import "../mixins";
 
-/** A React component holding a diff */
-#diff {
-  text-align: left;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+/** The container for the CodeMirror element. */
+.diff-code-mirror {
+  flex-grow: 1;
 }
 
 .CodeMirror {
@@ -48,9 +45,6 @@
   // Add a border to the end of the diff
   border-top: var(--base-border);
 }
-
-/** The container for the CodeMirror element. */
-.diff-code-mirror { height: 100%; }
 
 // The container element which holds the before and after
 // diff-line-number spans.
@@ -110,6 +104,7 @@
   }
 }
 
+
 .diff-line-selected {
   .diff-line-number {
     background: var(--diff-selected-background-color);
@@ -118,6 +113,7 @@
   }
 }
 
+
 .diff-line-hover {
   .diff-line-number {
     background: var(--diff-hover-background-color);
@@ -125,6 +121,7 @@
     color: var(--background-color);
   }
 }
+
 
 // Windows has custom scroll bars, see _scroll.scss
 @include win32-context {
@@ -162,17 +159,19 @@
 
 }
 
+
 #diff img {
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
   max-height: 100%;
 }
-
+// ***************************************************************************************************************************
 #diff a {
   text-decoration: none;
   margin-left: var(--spacing-half);
 }
+
 
 #diff a:link {
   color: (orange);
