--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -3,6 +3,11 @@ input[type='submit'] {
   background-color: var(--button-background);
   box-shadow: 0 1px 1px rgba(5, 5, 5, 0.04);
   color: var(--text-color);
+
+  // Chrome on Windows ignores the body element
+  // font-family and uses Arial so we redefine
+  // it here
+  font-family: var(--font-family-sans-serif);
   font-size: var(--font-size);
 
   padding: var(--spacing-half) var(--spacing);
