Move to summary to its own column

--- a/app/styles/ui/history/_file-list.scss
+++ b/app/styles/ui/history/_file-list.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex: 1;
 
+    border-right: var(--base-border);
+
     .list-item {
       border-bottom: var(--base-border);
       padding: var(--spacing);
