--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -10,7 +10,7 @@
   // in variables. It also makes it easier to read and understand what
   // color is being used. Note that these variables should _never_ be
   // used outside of this scope.
-  $blue: #4ca6eb;
+  $blue: #3d76c2;
   $orange: #c9510c;
   $yellow: #d0b44c;
   $red: #d0b44c;
@@ -29,8 +29,10 @@
   --background-color: $white;
 
 
-  --button-background: $lightGray;
-  --button-hover-background: $white;
+  --button-background: $blue;
+  --button-hover-background: lighten($blue, 5%);
+  --button-active-background: darken($blue, 5%);
+  --button-text-color: $white;
 
   // Typography
   //
@@ -152,8 +154,8 @@
   --toolbar-height: 52px;
 
   --tab-bar-height: 35px;
-  --tab-bar-active-color: #3D76C2;
-  --tab-bar-background-color: #ffffff;
+  --tab-bar-active-color: $blue;
+  --tab-bar-background-color: $white;
 
   /** Win32 has custom scrol bars, see _scroll.scss */
   --win32-scroll-bar-size: 10px;
