Target class name instead

--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -1,5 +1,4 @@
-button,
-input[type='submit'] {
+.button {
   background-color: var(--button-background);
   box-shadow: 0 1px 1px rgba(5, 5, 5, 0.04);
   color: var(--button-text-color);
