--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -1,6 +1,8 @@
 .toolbar-button {
   -webkit-appearance: none;
 
+  color: var(--button-text-color);
+
   // Reset styles from global buttons
   border: none;
   box-shadow: none;
