--- a/app/styles/ui/history/_file-list.scss
+++ b/app/styles/ui/history/_file-list.scss
@@ -10,10 +10,35 @@
       padding: var(--spacing);
     }
 
-    .path {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+    // Only use special colors for the change type icons when
+    // the list item doesn't have active focus. If it does we
+    // fall back to using the ambient foreground color of the
+    // list item.
+    .list-item:not(:focus) {
+      .status {
+        &-new .octicon { fill: var(--color-new); }
+        &-modified .octicon { fill: var(--color-modified); }
+        &-deleted .octicon { fill: var(--color-deleted); }
+      }
+    }
+
+    .commit-file {
+      display: flex;
+      flex-grow: 1;
+
+      // See https://css-tricks.com/flexbox-truncated-text/
+      min-width: 0;
+
+      input, .status { flex-shrink: 0; }
+
+      .path {
+        flex-grow: 1;
+        @include ellipsis;
+      }
+
+      .octicon {
+        vertical-align: text-bottom;
+      }
     }
   }
 }
