--- a/app/styles/ui/changes/_undo-commit.scss
+++ b/app/styles/ui/changes/_undo-commit.scss
@@ -8,6 +8,8 @@
 
   .commit-info {
     padding: var(--spacing);
+    padding-right: 0;
+    margin-right: var(--spacing-half);
 
     min-width: 0;
     display: flex;
@@ -29,5 +31,8 @@
   // amount of the padding.
   .actions {
     padding: var(--spacing);
+
+    // In order to not add to the margin already in commit-info.
+    padding-left: 0;
   }
 }
