--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -34,9 +34,9 @@
 }
 
 .branches-list-label {
-  background: var(--box-alt-background-color);
-  border-top: var(--base-border);
-  border-bottom: var(--base-border);
+  opacity: 0.6;
+  padding: 0 5px 0 20px;
+  margin-top: var(--spacing);
 }
 
 .branch-filter-input {
